<resources>
    <string name="app_name">Projeto Kju</string>
    <string name="action_settings">Configuraçoes</string>
    <string name="title_activity_atividade_menu">Atividade Menu</string>
    <string name="title_activity_atividade_produtos_doces">Atividade Produtos Doces</string>
    <string name="section_format">Produto: %1$d</string>
    <string name="title_activity_atividade_quantidade">Atividade Quantidade</string>
    <string name="title_activity_atividade_status">Atividade Status</string>
    <string name="title_activity_atividade_sucos">Atividade Sucos</string>
    <string name="title_activity_atividade_algomais">AtividadeAlgomais</string>
    <string name="title_activity_atividade_resultado">AtividadeResultado</string>
    <string name="title_activity_atividade_muitoobrigado">AtividadeMuitoobrigado</string>
    <string name="logar">Logar</string>
    <string name="senha">Senha</string>
    <string name="status_login">Status login</string>
    <string name="usuario">Usuario</string>
    <string name="usuario_teste_senha_1234">Usuario: teste senha:1234</string>
    <string name="o">o</string>
</resources>
