<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kju.projeto.projetokju.AtividadePrincipal"
    tools:showIn="@layout/activity_atividade_principal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtUsuario"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginBottom="65dp"
        android:background="@mipmap/logo_ambrosia"
        android:contentDescription="@string/o"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/usuario"
        android:ems="10"
        android:id="@+id/edtUsuario"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/edtSenha"
        android:hint="@string/senha"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/edtUsuario"
        android:layout_alignLeft="@+id/edtUsuario"
        android:layout_alignStart="@+id/edtUsuario" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/logar"
        android:id="@+id/btnLogar"
        android:layout_gravity="center"
        android:layout_below="@+id/edtSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/status_login"
        android:id="@+id/lblResultado"
        android:layout_below="@+id/btnLogar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblResultado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/usuario_teste_senha_1234" />

</RelativeLayout>
